--- a/app/src/main/res/drawable/bubble_vector.xml
+++ b/app/src/main/res/drawable/bubble_vector.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="512.0"
         android:width="24dp">
   <path
-          android:fillColor="#009688"
+          android:fillColor="#FFFFFF"
           android:pathData="M0.4,256a256,256 0,1 0,512 0a256,256 0,1 0,-512 0z" />
 </vector>
